--- a/class project ui/css/style.css
+++ b/class project ui/css/style.css
@@ -385,12 +385,67 @@ div.search-box {
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
 /* Home Banner Area css
+
 ============================================================================================ */
+/*banner for view more page*/
+
+.home-banner-area-viewmore {
+  z-index: 1;
+  background: url(../pics/banner/bg.png) no-repeat scroll center center;
+  background-size: cover;
+}
+
+
+.home-banner-area-viewmore .banner-inner {
+  overflow: hidden;
+  width: 100%;
+  padding: 170px 0 140px 0;
+}
+
+.home-banner-area-viewmore .banner-inner .banner-content {
+  color: #fff;
+}
+
+.home-banner-area-viewmore .banner-inner .banner-content .col-lg-9 {
+  vertical-align: middle;
+  -ms-flex-item-align: center;
+  align-self: center;
+}
+
+.home-banner-area-viewmore.banner-inner .banner-content h2 {
+  font-size: 50px;
+  font-weight: bold;
+  line-height: 85px;
+  margin-bottom: 10px;
+  margin-top: -30px;
+}
+
+.home-banner-area-viewmore .banner-inner .banner-content p {
+  color: #fff;
+  font-weight: 300;
+  max-width: 450px;
+  margin-bottom: 40px;
+  font-size: 14px;
+}
+
+.home-banner-area-viewmore .banner-inner .banner-content .banner-map-img {
+  text-align: left;
+  animation: shake0 1.9s;
+  animation-iteration-count: infinite;
+}
+
+/*banner for view more page*/
+
+
+
+
+/*banner for index page*/
 .home-banner-area {
   z-index: 1;
   background: url(../pics/banner/home-banner.jpg) no-repeat scroll center center;
   background-size: cover;
 }
+
 
 .home-banner-area .banner-inner {
   overflow: hidden;
@@ -823,8 +878,8 @@ div.search-box {
   right: 20px;
   left: 20px;
   bottom: 20px;
-  background: rgba(34, 34, 34, 0.8);
-  color: #fff;
+  background: rgba(56, 56, 56, 0.266);
+  color: #ffffff;
   -webkit-transition: all 0.3s linear;
   -o-transition: all 0.3s linear;
   transition: all 0.3s linear;
@@ -837,6 +892,7 @@ div.search-box {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  border-radius: 20px;
 }
 
 .categories-post .categories-details h5 {
@@ -844,7 +900,7 @@ div.search-box {
   font-size: 18px;
   line-height: 26px;
   text-transform: uppercase;
-  color: #fff;
+  color: #ffffff;
   position: relative;
 }
 
@@ -863,10 +919,9 @@ div.search-box {
 }
 
 .categories-post:hover .categories-details {
-   background-image: -moz-linear-gradient(0deg, rgba(188, 43, 255, 0.8) 0%, rgba(114, 73, 251, 0.8) 100%);
-  background-image: -webkit-linear-gradient(0deg, rgba(188, 43, 255, 0.8) 0%, rgba(114, 73, 251, 0.8) 100%);
-  background-image: -ms-linear-gradient(0deg, rgba(188, 43, 255, 0.8) 0%, rgba(114, 73, 251, 0.8) 100%);
-  background-color: transparent;
+
+  border-radius: 20px;
+  background-color:#11111162
 }
 
 /*============ blog-right-sidebar css ==============*/
@@ -956,6 +1011,7 @@ div.search-box {
   border: 1px solid #eeeeee;
   background: #fafaff;
   padding: 30px;
+  border-radius: 24px;
 }
 
 .blog-left-sidebar .widget-title {
@@ -968,6 +1024,7 @@ div.search-box {
   color: #fff;
   padding: 8px 0;
   margin-bottom: 30px;
+  border-radius: 24px;
 }
 
 .blog-left-sidebar .search-widget .input-group .form-control {
@@ -1426,6 +1483,7 @@ div.search-box {
   border: 1px solid #eee;
   padding: 50px 30px;
   margin-top: 50px;
+  border-radius: 24px;
 }
 
 @media (max-width: 414px) {
@@ -1508,12 +1566,13 @@ div.search-box {
 }
 
 .comment-form {
-  background: #fafaff;
+  background: #D6CEF2;
   text-align: center;
-  border: 1px solid #eee;
+  border: 1px solid #D6CEF2;
   padding: 47px 30px 43px;
   margin-top: 50px;
   margin-bottom: 40px;
+  border-radius: 24px;
 }
 
 .comment-form h4 {
@@ -3474,7 +3533,7 @@ h6 {
 
 .blog-btn {
   border: 1px solid #eeeeee;
-  background: #f9f9ff;
+  background: #ffc107;
   padding: 0 32px;
   font-size: 13px;
   font-weight: 500;
