--- a/class project ui/css/style.css
+++ b/class project ui/css/style.css
@@ -4146,3 +4146,56 @@ h6 {
 /*---------------------------------------------------- */
 
 /*# sourceMappingURL=style.css.map */
+.send-btn {
+  /* margin-right: 79%; */
+  margin-left: 14px;
+  padding: 0 40px;
+  line-height: 40px;
+  background: #ffc107;
+  color: #230B34;
+  font-size: 13px;
+  font-weight: 600;
+  -webkit-transition: all 300ms linear 0s;
+  -o-transition: all 300ms linear 0s;
+  transition: all 300ms linear 0s;
+}
+
+.send-btn:hover {
+  color: #230B34;
+  background: #8e54ab;
+  -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.1);
+
+}
+
+.bg-glass {
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.21);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2.1px);
+  -webkit-backdrop-filter: blur(2.1px);
+  border: 1px solid rgba(255, 255, 255, 1);
+}
+
+.bg-size {
+  background-size: 100% 100% !important;
+  background-repeat: no-repeat !important;
+  background-position: left top !important;
+}
+
+.radius-10 {
+  border-radius: 10px !important;
+}
+
+.radius-24 {
+  border-radius: 24px !important;
+}
+.login-banner{
+  z-index: 1;
+  background: url(../pics/banner/login-bg.png) no-repeat scroll center center;
+  background-size:cover;
+  overflow: hidden;
+  height: 100%;
+  padding: 230px 0px 230px 0px;
+}
